<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:paddingBottom="16dp">

    <TextView
            android:text="@string/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CompanyTextView"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locationTextView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@+id/CompanyTextView"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/start_date"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:id="@+id/startDateTextView"
            android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endDateTextView"
            android:layout_marginStart="100dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="@+id/startDateTextView"
            app:layout_constraintBottom_toBottomOf="@+id/startDateTextView"
            app:layout_constraintStart_toEndOf="@+id/startDateTextView"/>
    <TextView
            android:text="@string/role"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/roleTextView"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@+id/startDateTextView"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/responsibilities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/jobDutiesTitleTextView"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/roleTextView"
            app:layout_constraintStart_toStartOf="parent"
         />
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dutiesTextView"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/jobDutiesTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>