<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ui.fragments.ProfileFragment">

    <View
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/view"/>
    <TextView
            android:id="@+id/resumeResponseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/about_me"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/view"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/educationLabelContainer"
            android:layout_width="166dp"
            android:layout_height="75dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/resumeResponseTextView"
    >
        <ImageButton
                android:src="@mipmap/ic_graduate_student_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/educationImageButton"
                android:background="@null"
                android:layout_marginTop="16dp"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/educationTextView"
                android:layout_width="82dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:text="@string/education"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toTopOf="@+id/educationImageButton"
                app:layout_constraintBottom_toBottomOf="@+id/educationImageButton"
                app:layout_constraintStart_toEndOf="@+id/educationImageButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/workLabelContainer"
            android:layout_width="166dp"
            android:layout_height="75dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/educationLabelContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/educationLabelContainer">
        <ImageButton
                android:src="@mipmap/ic_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/workImageButton"
                android:background="@null"
                android:layout_marginTop="16dp"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"/>

        <TextView
                android:id="@+id/workTextView"
                android:layout_width="122dp"
                android:layout_height="21dp"
                android:text="@string/work"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/workImageButton"
                app:layout_constraintTop_toTopOf="@+id/workImageButton"
                app:layout_constraintBottom_toBottomOf="@+id/workImageButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/skillLabelContainer"
            android:layout_width="166dp"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="60dp"
            app:layout_constraintTop_toBottomOf="@+id/resumeResponseTextView"
            app:layout_constraintStart_toEndOf="@+id/educationLabelContainer" >
        <ImageButton
                android:src="@mipmap/ic_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/skillImageButton"
                android:layout_marginTop="16dp"
                android:layout_marginStart="4dp"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/skillTextView"
                android:layout_width="76dp"
                android:layout_height="22dp"
                android:text="@string/skills"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/skillImageButton"
                app:layout_constraintTop_toTopOf="@+id/skillImageButton"
                app:layout_constraintBottom_toBottomOf="@+id/skillImageButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
            android:src="@mipmap/ic_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/resumeResponseTextView"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
      />
</androidx.constraintlayout.widget.ConstraintLayout>